2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.
	Update release string to 6.99.99.901 (i.e., 7.0 RC1).

2005-10-18  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/config/Makefile.am:
	Fix parallel builds my ensuring libdmxconfig builds first.

	* hw/xfree86/Makefile.am:
	Fix distcheck by forcing Xorg to be installed before chmod/chown.

2005-10-18  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Don't use $< in explicit rules since neither BSD nor Solaris make
	allow that.

2005-10-17  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/loader/Makefile.am:
	Add miext/damage so misym.c can export DamageDamageRegion.

2005-10-17  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Work around automake-1.7 braindamage by providing an explicit rule
	for XOrgCfg.

	* hw/xfree86/Makefile.am:
	More automake 1.7 braindamage: use mkdir -p, not $(mkdir_p).

2005-10-17  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac: Fix whitespace in AS_HELP_STRING uses, convert
	all help strings to use AS_HELP_STRING.

2005-10-17  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* Xext/Makefile.am:
	* include/dix-config.h.in
	Add support for more extensions

	* GL/Makefile.am:
	* XTrap/Makefile.am:
	* hw/xfree86/os-support/Makefile.am:
	* hw/xfree86/os-support/bsd/Makefile.am:
	* hw/xfree86/os-support/bus/Makefile.am:
	* hw/xfree86/os-support/linux/Makefile.am:
	* hw/xfree86/os-support/linux/int10/Makefile.am:
	* hw/xfree86/os-support/misc/Makefile.am:
	* hw/xfree86/os-support/solaris/Makefile.am:
	* hw/xfree86/vgahw/Makefile.am:
	* hw/xfree86/x86emu/Makefile.am:
	* os/Makefile.am:
	Add missing files to EXTRA_DIST

2005-10-15  Donnie Berkholz  <spyderous@gentoo.org>

	* configure.ac: Change '==' to portable '='.

2005-10-15  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac: