@@ -3,6 +3,3 @@ noinst_LTLIBRARIES = libxtrap.la
 AM_CFLAGS = $(DIX_CFLAGS)
 
 libxtrap_la_SOURCES = xtrapddmi.c xtrapdi.c xtrapdiswp.c xtrapditbl.c
-
-# FIXME: Shouldn't this be used if we're to load xtrap as a module?
-EXTRA_DIST = xf86XTrapModule.c
