@@ -6,6 +6,10 @@ if GLX
 GLXMODS = libglx.la libGLcore.la
 endif
 
+# if XTRAP
+# XTRAPMOD = libxtrap.la
+# endif
+
 module_LTLIBRARIES = libafb.la \
                      libbitmap.la \
                      libcfb.la \
@@ -21,6 +25,7 @@ module_LTLIBRARIES = libafb.la \
 		     libfreetype.la \
                      libtype1.la \
                      $(GLXMODS)
+#                    $(XTRAPMOD)
 
 AM_CFLAGS = @XORG_CFLAGS@ @DIX_CFLAGS@
 INCLUDES = @XORG_INCS@ \
@@ -99,6 +104,12 @@ libtype1_la_SOURCES = type1mod.c
 libdixmods_la_SOURCES = $(top_srcdir)/mi/miinitext.c
 
 libxorgxkb_la_SOURCES = xkbVT.c xkbPrivate.c xkbKillSrv.c
+
+# XXX NOTYET
+# libxtrap_la_LDFLAGS = -avoid-version
+# libxtrap_la_LIBADD = $(top_builddir)/XTrap/libxtrap.la
+# libxtrap_la_SOURCES = xf86XTrapModule.c
+EXTRA_DIST = xf86XTrapModule.c
 
 xkb%.c:
 	echo "#define XF86DDXACTIONS" > $@
